--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
         <h3 class="sub"> About Me </h3>
         <p>
             I am a software developer with solid problem solving skills and proven experience in creating and designing software in a test-based environment.<br>
-            I help stores to make grow their brands by improving their design and performance with new technologies and clean code.
+            I have experience working solo as a freelancer and also I've worked with different Agencies, leading projects, helping and teaching Junior developers on the team to improve their Front-end skills.
+            Currently, I'm working with Shopify and Shopify+ e-commerces to make grow their online revenue by improving their website design and performance with new technologies and clean code.
         </p>
     </section>
     <section class="services">
