--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <h3 class="sub"> About Me </h3>
         <p>
             I am a software developer with solid problem solving skills and proven experience in creating and designing software in a test-based environment.<br>
-            I have experience working solo as a freelancer and also I've worked with different Agencies, leading projects, helping and teaching Junior developers on the team to improve their Front-end skills.<br>
+            During my career, I have gained experience as both a solo freelancer and a team member working with various agencies. I have led multiple projects and worked with junior developers, providing guidance and mentorship to help them improve their front-end skills.<br>
             Currently, I'm working with Shopify and Shopify+ e-commerces to make grow their online revenue by improving their design and performance with new technologies and clean code.
         </p>
     </section>
