--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <section class="hero">
         <img class="background" src="images/desktop.jpeg" width="250" height="250" alt="Desktop with a laptop and a monitor">
         <div class="info">
-            <img class="me" src="images/me.jpg" width="250" height="250" alt="Person with a mug">
+            <img class="me" src="images/me2.jpg" width="250" height="250" alt="Person with a mug">
             <h1> Martin Jose </h1>
             <h2> Web development </h2>
         </div>
