--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                                 </svg>Liquid
                             </li>
                             <li> <img src="https://i.pinimg.com/originals/9c/1a/7b/9c1a7b98ba1e02023393846c9509c587.png" width="30" height="30" alt=""> Golang </li>
-                            <li> <img src="/favicon.svg" width="30" height="30" alt=""> Astro </li>
+                            <li> <img src="images/favicon.svg" width="30" height="30" alt=""> Astro </li>
                         </ul>
                     </div>
                 </li>
